# LLM-Projects

./: .env  .gitignore  README.md
.claude/: settings.local.json
AI-Agent-App/: Requirements.txt  app.py
AI-Agent-App/ai-agent-output/: step_1_suggested_search_queries.json  (+2 more)
Chat With Postgres Database/: CDMS ERD.pgerd  CDMS SQL Query.sql  README.md  requirements.txt
Chat_with_SQL/: Chinook.db  Q_A_System_Over_SQL_Data.py  README.md
Exps/: all-MiniLM-L6-v2.py
Fine Tuning LLMs/: Fine_Tune_Llama_3_1_8B_with_Unsloth.ipynb  Fine_Tuning_Mistral_Model.ipynb  Simple_LoRA_Implementation.ipynb
Hotels Dataset Project/: README.md  Search_engine_through_Miami_hotels.ipynb
Multi-Agent/: README.md  pyproject.toml
Multi-Agent/src/multi_agent/: Customer_Support.py  Event_Planning.py  Financial_Analysis.py  Tailor_Job_App.py  Tools_Customer_Outreach.py  marketing_report.md  utils.py  venue_details.json
Multi-language-Code-Assistant/: app.py  modelfile
Notebooks/: Evaluation and Structured Output.ipynb  PDFQuery_LangChain.ipynb  Prompting.ipynb
RAG-With-Dockling/: README.md  app.py  requirements.txt
Resume-Enhancer/: USER_GUIDE.md  app.py  requirements.txt
Retrieval Systems/: Retrieval_Question_Answering (part 1).ipynb  Retrieval_Question_Answering (part 2).ipynb  article.txt
Search Engine/: README.md  agents.py  app.py  graph.py  tools.py
Text to Math Problem Solver app/: Text_to_Math_Problem_Solver.py
Text-Summarization/: Final_text_summarization_app.py  README.md  Text_Summarization.ipynb
Vision-RAG-APP/: README.md  app.py  requirements.txt
(+13 files in other folders)
