[project]
name = "multi-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdelmoneim Mohamed",email = "96942944+Xmen3em@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "crewai (>=1.7.0,<2.0.0)",
    "crewai-tools (>=1.7.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "ipython (>=9.8.0,<10.0.0)"
]

[tool.poetry]
packages = [{include = "multi_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
